Fix label z-index for menu component

--- a/sass/components/_menu.scss
+++ b/sass/components/_menu.scss
@@ -18,6 +18,7 @@
     bottom: 0;
     left: 0;
     right: 0;
+    z-index: 100;
 
     &:hover {
       cursor: pointer;
